# accurate-benchmark

./: .gitignore  README.md  SECURITY.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
accurate_benchmark/: __init__.py  _console.py  _constants.py  benchmarking.py  parameters.py
