[project]
name = "accurate-benchmark"
version = "1.5.0"
description = "A python package for accurate benchmarking and speed comparisons"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "ruff>=0.12.1",
]
