[project]
name = "accurate-benchmark"
version = "3.0.2"
authors = [{ name = "JetVolcano" }]
maintainers = [{ name = "JetVolcano" }]
description = "A python package for accurate benchmarking and speed comparisons"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
dependencies = ["numpy>=2.4.2", "rich[jupyter]>=14.3.1", "scipy>=1.17.0"]

[dependency-groups]
dev = ["jupyter>=1.1.1", "ruff>=0.14.5"]

[project.urls]
Source = "https://github.com/JetVolcano/accurate-benchmar"
Issues = "https://github.com/JetVolcano/accurate-benchmark/issues"
