[project]
name = "accurate-benchmark"
version = "4.0.0"
authors = [{ name = "JetVolcano" }]
maintainers = [{ name = "JetVolcano" }]
description = "A python package for accurate benchmarking and speed comparisons"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "rich>=14.3.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "ruff>=0.15.2"]

[tool.ruff]
respect-gitignore = false

[tool.ruff.lint]
select = ["RUF", "PL", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = true

[project.urls]
Source = "https://github.com/JetVolcano/accurate-benchmark"
Issues = "https://github.com/JetVolcano/accurate-benchmark/issues"
